--- a/ios/IRKit/IRKitResources/IRNewSignalScene2ViewController.xib
+++ b/ios/IRKit/IRKitResources/IRNewSignalScene2ViewController.xib
@@ -222,6 +222,23 @@
 					</object>
 					<int key="connectionID">348</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">processTextField:</string>
+						<reference key="source" ref="781007303"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">19</int>
+					</object>
+					<int key="connectionID">349</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="781007303"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">350</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -369,7 +386,7 @@
 						<reference key="object" ref="956922898"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="562064754"/>
-							<object class="IBNSLayoutConstraint" id="654313605">
+							<object class="IBNSLayoutConstraint" id="971056353">
 								<reference key="firstItem" ref="562064754"/>
 								<int key="firstAttribute">10</int>
 								<int key="relation">0</int>
@@ -547,7 +564,7 @@
 						<reference key="object" ref="562064754"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="781007303"/>
-							<object class="IBNSLayoutConstraint" id="736393893">
+							<object class="IBNSLayoutConstraint" id="432606761">
 								<reference key="firstItem" ref="781007303"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -658,12 +675,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">346</int>
-						<reference key="object" ref="736393893"/>
+						<reference key="object" ref="432606761"/>
 						<reference key="parent" ref="562064754"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">347</int>
-						<reference key="object" ref="654313605"/>
+						<reference key="object" ref="971056353"/>
 						<reference key="parent" ref="956922898"/>
 					</object>
 				</array>
@@ -689,7 +706,7 @@
 					<reference ref="1066865114"/>
 					<reference ref="788830229"/>
 					<reference ref="434030851"/>
-					<reference ref="654313605"/>
+					<reference ref="971056353"/>
 				</array>
 				<boolean value="NO" key="319.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="320.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -713,7 +730,7 @@
 				<array class="NSMutableArray" key="333.IBViewMetadataConstraints">
 					<reference ref="917124770"/>
 					<reference ref="809926355"/>
-					<reference ref="736393893"/>
+					<reference ref="432606761"/>
 				</array>
 				<boolean value="NO" key="333.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="334.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -735,24 +752,27 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">348</int>
+			<int key="maxID">350</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">IRNewSignalScene2ViewController</string>
 					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">editingChanged:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">editingChanged:</string>
-						<object class="IBActionInfo" key="NS.object.0">
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="editingChanged:">id</string>
+						<string key="processTextField:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="editingChanged:">
 							<string key="name">editingChanged:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-					</object>
+						<object class="IBActionInfo" key="processTextField:">
+							<string key="name">processTextField:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
 					<object class="NSMutableDictionary" key="outlets">
 						<string key="NS.key.0">textField</string>
 						<string key="NS.object.0">UITextField</string>
