--- a/ios/IRKit/IRKitResources/IRPeripheralCell.xib
+++ b/ios/IRKit/IRKitResources/IRPeripheralCell.xib
@@ -100,10 +100,10 @@
 									<object class="IBUILabel" id="299355430">
 										<reference key="NSNextResponder" ref="359541660"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{61, 37}, {223, 21}}</string>
+										<string key="NSFrame">{{61, 31}, {223, 21}}</string>
 										<reference key="NSSuperview" ref="359541660"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="404060247"/>
+										<reference key="NSNextKeyView" ref="319752755"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -145,13 +145,12 @@
 											<string key="NSResourceName">icn_arrow.png</string>
 										</object>
 									</object>
-									<object class="IBUIView" id="404060247">
+									<object class="IBUIView" id="319752755">
 										<reference key="NSNextResponder" ref="359541660"/>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 58}, {296, 1}}</string>
 										<reference key="NSSuperview" ref="359541660"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
 											<int key="NSColorSpace">1</int>
@@ -354,20 +353,20 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="511386633">
-								<reference key="firstItem" ref="299355430"/>
+							<object class="IBNSLayoutConstraint" id="892125796">
+								<reference key="firstItem" ref="359541660"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="359541660"/>
+								<reference key="secondItem" ref="299355430"/>
 								<int key="secondAttribute">4</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">0.0</double>
+									<double key="value">6</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="359541660"/>
-								<int key="scoringType">8</int>
-								<float key="scoringTypeFloat">29</float>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="526833835">
@@ -434,8 +433,8 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="92768802">
-								<reference key="firstItem" ref="404060247"/>
+							<object class="IBNSLayoutConstraint" id="438560441">
+								<reference key="firstItem" ref="319752755"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="359541660"/>
@@ -450,11 +449,11 @@
 								<float key="scoringTypeFloat">40</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="417619653">
+							<object class="IBNSLayoutConstraint" id="505313270">
 								<reference key="firstItem" ref="359541660"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="404060247"/>
+								<reference key="secondItem" ref="319752755"/>
 								<int key="secondAttribute">6</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
@@ -466,8 +465,8 @@
 								<float key="scoringTypeFloat">40</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="496590522">
-								<reference key="firstItem" ref="404060247"/>
+							<object class="IBNSLayoutConstraint" id="886336382">
+								<reference key="firstItem" ref="319752755"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="359541660"/>
@@ -518,7 +517,7 @@
 							<reference ref="697790443"/>
 							<reference ref="429180956"/>
 							<reference ref="299355430"/>
-							<reference ref="404060247"/>
+							<reference ref="319752755"/>
 						</array>
 						<reference key="parent" ref="3703055"/>
 					</object>
@@ -716,10 +715,10 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">494</int>
-						<reference key="object" ref="404060247"/>
+						<reference key="object" ref="319752755"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="120042158">
-								<reference key="firstItem" ref="404060247"/>
+							<object class="IBNSLayoutConstraint" id="763043786">
+								<reference key="firstItem" ref="319752755"/>
 								<int key="firstAttribute">8</int>
 								<int key="relation">0</int>
 								<nil key="secondItem"/>
@@ -729,7 +728,7 @@
 									<double key="value">1</double>
 								</object>
 								<float key="priority">1000</float>
-								<reference key="containingView" ref="404060247"/>
+								<reference key="containingView" ref="319752755"/>
 								<int key="scoringType">9</int>
 								<float key="scoringTypeFloat">40</float>
 								<int key="contentType">1</int>
@@ -739,27 +738,27 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">500</int>
-						<reference key="object" ref="496590522"/>
+						<reference key="object" ref="886336382"/>
 						<reference key="parent" ref="359541660"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">504</int>
-						<reference key="object" ref="417619653"/>
+						<reference key="object" ref="505313270"/>
 						<reference key="parent" ref="359541660"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">507</int>
-						<reference key="object" ref="92768802"/>
+						<reference key="object" ref="438560441"/>
 						<reference key="parent" ref="359541660"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">508</int>
-						<reference key="object" ref="120042158"/>
-						<reference key="parent" ref="404060247"/>
+						<reference key="object" ref="763043786"/>
+						<reference key="parent" ref="319752755"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">511</int>
-						<reference key="object" ref="511386633"/>
+						<int key="objectID">517</int>
+						<reference key="object" ref="892125796"/>
 						<reference key="parent" ref="359541660"/>
 					</object>
 				</array>
@@ -778,17 +777,17 @@
 					<reference ref="414524937"/>
 				</array>
 				<string key="323.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="323.IBViewMetadataConstraints">
+				<array class="NSMutableArray" key="323.IBViewMetadataConstraints">
 					<reference ref="626515828"/>
 					<reference ref="201570036"/>
-					<reference ref="496590522"/>
-					<reference ref="417619653"/>
-					<reference ref="92768802"/>
+					<reference ref="886336382"/>
+					<reference ref="505313270"/>
+					<reference ref="438560441"/>
 					<reference ref="200360036"/>
 					<reference ref="1006305657"/>
 					<reference ref="886742090"/>
 					<reference ref="526833835"/>
-					<reference ref="511386633"/>
+					<reference ref="892125796"/>
 					<reference ref="794760836"/>
 					<reference ref="487836953"/>
 				</array>
@@ -831,20 +830,20 @@
 				<string key="491.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="494.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<array key="494.IBViewMetadataConstraints">
-					<reference ref="120042158"/>
+					<reference ref="763043786"/>
 				</array>
 				<boolean value="NO" key="494.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="500.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="504.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="507.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="508.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="511.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="517.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">511</int>
+			<int key="maxID">517</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
